# Amiga

./: .env.web  .gitignore  AGENTS.md  CONTENT_STUDIO.md  Codex.md  PRODUCT_DESIGN.md  README.md  build-android-tv.bat  build-android.bat  build-android.sh  index.html  learn-hub-screenshot.html  package-lock.json  package.json  release-github.bat  run-android-arm.bat  run-android-x86.bat  run-android.bat  run-android.sh  run-content-studio.bat  run-vite-stub.bat  run-web.bat  run-windows-2.bat  run-windows-exe.bat  run-windows-tv.bat  run-windows-vite.bat  run-windows.bat  vite.config.js  vitest.config.js  x.x.(+1)  测试报告.md
cloudflare-chat/: README.md  package-lock.json  package.json  schema.sql  wrangler.toml  wrangler.toml.example
content-studio/: README.md  e2e-test.mjs  index.html  integration-test.mjs  package-lock.json  package.json  question-store-test.mjs  test-llm.mjs  utils-test.mjs  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.conf.test.json  tauri.tv.conf.json
src-tauri/.cargo/: config.toml
src-tauri/android/app/: proguard-rules.pro
src-tauri/android/app/src/main/: AndroidManifest.xml
src-tauri/android/app/src/main/java/com/idioma/app/: MainActivity.kt  SharePlugin.kt  TranslateWindowCallback.kt
src-tauri/android/app/src/main/res/drawable/: tv_banner.xml
src-tauri/android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mobile.rs
src-tauri/src/commands/: achievements.rs  chat.rs  database.rs  greeting.rs  learning.rs  llm.rs  mod.rs  news.rs  path.rs  prompts.rs  reading.rs  share.rs  soulmate.rs  speaking.rs  sync.rs  syncable.rs  update.rs  user.rs  vocabulary.rs
src-tauri/src/modules/: achievements.rs  android_paths.rs  chat.rs  database.rs  greeting.rs  learning.rs  llm.rs  logging.rs  migrations.rs  mod.rs  news.rs  path.rs  path_content.rs  prompts.rs  reading.rs  soulmate.rs  speaking.rs  streak.rs  sync.rs  sync_config.rs  translation.rs  user.rs  vocabulary.rs
src-tauri/src/modules/sync/: payload.rs  remote.rs  settings.rs  types.rs
(+880 files in other folders)
